nuevos cambios y index local

--- a/Amigos.html
+++ b/Amigos.html
@@ -17,5 +17,6 @@
       <li>Leon Constandopulo</li>
       <li>Joaquin Alba</li>
     </ul>
+    <a href="../index.html">Volver</a>
   </body>
 </html>
