--- a/HTML Actividad 2/Ejercitacion de texto.html
+++ b/HTML Actividad 2/Ejercitacion de texto.html
@@ -32,7 +32,9 @@
     </blockquote>
     </p>
     <img src="https://iieh.com/images/hieloartico.jpg" alt="Cambio climático en el Ártico" width="640" height="332">
-
+    <br>
+    <a href="../index.html">Volver</a>
+    </br>
 </body>
 
 </html>
