--- a/HTML Actividad 2/Formulario Avanzado.html
+++ b/HTML Actividad 2/Formulario Avanzado.html
@@ -88,5 +88,8 @@
         <input type="reset" value="Borrar datos" />
       </form>
     </fieldset>
+    <br>
+    <a href="../index.html">Volver</a>
+    </br>
   </body>
 </html>
