--- a/HTML Actividad 2/Formulario.html
+++ b/HTML Actividad 2/Formulario.html
@@ -37,6 +37,9 @@
         <input type="reset" value="Borrar datos">
 
     </form>
+    <br>
+    <a href="../index.html">Volver</a>
+    </br>
 </body>
 
 </html>
