--- a/HTML Actividad 2/Tablas.html
+++ b/HTML Actividad 2/Tablas.html
@@ -42,5 +42,8 @@
               <td><strong>207.51</strong></td>
             </tr>
           </table>
+          <br>
+          <a href="../index.html">Volver</a>
+          </br>
     </body>
 </html>
