--- a/HTML Actividad 2/Formulario Avanzado 2.html
+++ b/HTML Actividad 2/Formulario Avanzado 2.html
@@ -52,6 +52,9 @@
         <input type="submit" value="Guardar cambios" />
         <input type="reset" value="Borrar datos" />
     </form>
+    <br>
+    <a href="../index.html">Volver</a>
+    </br>
 </body>
 
 </html>
